--- a/libuvccamera/src/main/AndroidManifest.xml
+++ b/libuvccamera/src/main/AndroidManifest.xml
@@ -1,10 +1,4 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.serenegiant.uvccamera"
-    android:versionCode="2"
-    android:versionName="1.1" >
-
-    <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="22" />
+    package="com.serenegiant.uvccamera">
 
 </manifest>
