--- a/usbCameraTest3/build.gradle
+++ b/usbCameraTest3/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion Integer.valueOf(project.ext.androidCompileSDKVersion)
+    buildToolsVersion project.ext.androidBuildToolsVersion
 
     defaultConfig {
         applicationId "com.serenegiant.usbcameratest3"
-        minSdkVersion 18
-        targetSdkVersion 22
+        minSdkVersion Integer.valueOf(project.ext.androidMinSDKVersion)
+        targetSdkVersion Integer.valueOf(project.ext.androidTargetSDKVersion)
 		versionCode 7
 		versionName "2.20"
     }
